--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
+    "express-handlebars": "^6.0.6",
     "mysql": "^2.18.1",
     "sequelize": "^6.21.6"
   }
