--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express-handlebars": "^6.0.6",
