--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express-handlebars": "^6.0.6",
+    "express-validator": "^6.14.2",
     "mysql": "^2.18.1",
     "sequelize": "^6.21.6"
   }
