--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.2",
     "express-handlebars": "^6.0.6",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "sequelize": "^6.21.6"
   }
