--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.2",
     "express-handlebars": "^6.0.6",
     "express-validator": "^6.14.2",
