ADD: crush report

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/ortamfag/KIS_Avia.git"
   },
-  "author": "",
+  "author": "Artem 'ortamfag' Zhidov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ortamfag/KIS_Avia/issues"
