--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DB_HOST = std-mysql.ist.mospolytech.ru
+DB_HOST = localhost
 DB_PORT = 3306
 DB_NAME = std_1408_kis
-DB_USER = std_1408_kis
-DB_PASS = 12345678
+DB_USER = root
